いくつかのバグを修正した。SORT Objectsの視覚化が必要だ。

--- a/001_check_facial_orientation.ipynb
+++ b/001_check_facial_orientation.ipynb
@@ -18,8 +18,8 @@
     "from ultralytics import YOLO\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from common.yolo.ultralytics_structs import process_pose\n",
-    "from common.yolo.visualization import draw_skeletons, draw_facial_vectors_2D\n",
+    "from common.yolo.yolo_results_aux import results_to_pose_list\n",
+    "from common.yolo.visualization import draw_skeletons_with_bboxes, draw_facial_vectors_2d\n",
     "from common.yolo.nms import nms_for_yolo_pose\n",
     "from common.yolo.facial_orientation import detect_facial_vectors"
    ]
@@ -498,7 +498,7 @@
     "results = model(image, verbose=False)[0]\n",
     "\n",
     "# Process the pose\n",
-    "poses = process_pose(results)\n",
+    "poses = results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
     "poses = nms_for_yolo_pose(poses)\n",
@@ -507,10 +507,10 @@
     "facial_vectors = detect_facial_vectors(poses)\n",
     "\n",
     "# Draw the facial vectors\n",
-    "draw_facial_vectors_2D(image, facial_vectors, True, True)\n",
+    "draw_facial_vectors_2d(image, facial_vectors, True, True)\n",
     "\n",
     "# Draw the skeletons\n",
-    "draw_skeletons(image, poses, show_names=False)\n",
+    "draw_skeletons_with_bboxes(image, poses, show_names=False)\n",
     "\n",
     "# Display the frame\n",
     "image = cv2.resize(image, (1024, 800))\n",
@@ -558,7 +558,7 @@
     "results = model(image, verbose=False)[0]\n",
     "\n",
     "# Process the pose\n",
-    "poses = process_pose(results)\n",
+    "poses = results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
     "poses = nms_for_yolo_pose(poses)\n",
@@ -567,10 +567,10 @@
     "facial_vectors = detect_facial_vectors(poses)\n",
     "\n",
     "# Draw the facial vectors\n",
-    "draw_facial_vectors_2D(image, facial_vectors)\n",
+    "draw_facial_vectors_2d(image, facial_vectors)\n",
     "\n",
     "# Draw the skeletons\n",
-    "draw_skeletons(image, poses, show_names=False)\n",
+    "draw_skeletons_with_bboxes(image, poses, show_names=False)\n",
     "\n",
     "# Display the frame\n",
     "image = cv2.resize(image, (1024, 800))\n",
@@ -618,7 +618,7 @@
     "results = model(image, verbose=False)[0]\n",
     "\n",
     "# Process the pose\n",
-    "poses = process_pose(results)\n",
+    "poses = results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
     "poses = nms_for_yolo_pose(poses)\n",
@@ -627,10 +627,10 @@
     "facial_vectors = detect_facial_vectors(poses)\n",
     "\n",
     "# Draw the facial vectors\n",
-    "draw_facial_vectors_2D(image, facial_vectors, show_legend=True)\n",
+    "draw_facial_vectors_2d(image, facial_vectors, show_legend=True)\n",
     "\n",
     "# Draw the skeletons\n",
-    "draw_skeletons(image, poses, show_names=False)\n",
+    "draw_skeletons_with_bboxes(image, poses, show_names=False)\n",
     "\n",
     "# Display the frame\n",
     "image = cv2.resize(image, (1024, 800))\n",
