--- a/003_check_yolo_aux.ipynb
+++ b/003_check_yolo_aux.ipynb
@@ -32,9 +32,10 @@
     "        Yolo(lx=10, ly=20, rx=30, ry=40, cls=1, conf=0.95),\n",
     "        Yolo(lx=15, ly=25, rx=35, ry=45, cls=2, conf=0.85)\n",
     "    ]\n",
+    "    # Adjusted order: [x1, y1, x2, y2, conf, cls]\n",
     "    expected_array = np.array([\n",
-    "        [10, 20, 30, 40, 1, 0.95],\n",
-    "        [15, 25, 35, 45, 2, 0.85]\n",
+    "        [10, 20, 30, 40, 0.95, 1],\n",
+    "        [15, 25, 35, 45, 0.85, 2]\n",
     "    ])\n",
     "    result_array = yolo_list_to_numpy(yolo_list)\n",
     "    assert np.array_equal(result_array, expected_array), \"yolo_list_to_numpy() failed\"\n",
@@ -45,14 +46,15 @@
     "    pose_points2 = [YoloPoint(x=i + 1, y=i + 2, conf=0.7) for i in range(17)]\n",
     "    \n",
     "    pose_list = [\n",
-    "        YoloPose(lx=50, ly=60, rx=70, ry=80, conf=0.99, pts=pose_points1),\n",
-    "        YoloPose(lx=55, ly=65, rx=75, ry=85, conf=0.95, pts=pose_points2)\n",
+    "        YoloPose(lx=50, ly=60, rx=70, ry=80, cls=1, conf=0.99, pts=pose_points1),\n",
+    "        YoloPose(lx=55, ly=65, rx=75, ry=85, cls=2, conf=0.95, pts=pose_points2)\n",
     "    ]\n",
     "    \n",
+    "    # Adjusted order: [x1, y1, x2, y2, conf, cls] followed by flattened keypoints\n",
     "    expected_array = np.array([\n",
-    "        [50, 60, 70, 80, 0.99, [[i, i + 1, 0.8] for i in range(17)]],\n",
-    "        [55, 65, 75, 85, 0.95, [[i + 1, i + 2, 0.7] for i in range(17)]]\n",
-    "    ], dtype=object)  # Use dtype=object to handle the nested lists\n",
+    "        [50, 60, 70, 80, 0.99, 1] + [val for pt in pose_points1 for val in pt.to_list()],\n",
+    "        [55, 65, 75, 85, 0.95, 2] + [val for pt in pose_points2 for val in pt.to_list()]\n",
+    "    ])\n",
     "    \n",
     "    result_array = pose_list_to_numpy(pose_list)\n",
     "    assert np.array_equal(result_array, expected_array), \"pose_list_to_numpy() failed\"\n",
@@ -61,8 +63,8 @@
     "# Test Cases for `numpy_to_yolo_list`\n",
     "def test_numpy_to_yolo_list():\n",
     "    input_array = np.array([\n",
-    "        [10, 20, 30, 40, 1, 0.95],\n",
-    "        [15, 25, 35, 45, 2, 0.85]\n",
+    "        [10, 20, 30, 40, 0.95, 1],\n",
+    "        [15, 25, 35, 45, 0.85, 2]\n",
     "    ])\n",
     "    expected_yolo_list = [\n",
     "        Yolo(lx=10, ly=20, rx=30, ry=40, cls=1, conf=0.95),\n",
@@ -73,22 +75,24 @@
     "\n",
     "# Test Cases for `numpy_to_pose_list`\n",
     "def test_numpy_to_pose_list():\n",
+    "    # Input array in fully flattened structure with new order\n",
     "    input_array = np.array([\n",
-    "        [50, 60, 70, 80, 0.99, [[i, i + 1, 0.8] for i in range(17)]],\n",
-    "        [55, 65, 75, 85, 0.95, [[i + 1, i + 2, 0.7] for i in range(17)]]\n",
-    "    ], dtype=object)  # Specify dtype=object to handle nested lists\n",
+    "        [50, 60, 70, 80, 0.99, 1] + [coord for i in range(17) for coord in (i, i + 1, 0.8)],\n",
+    "        [55, 65, 75, 85, 0.95, 2] + [coord for i in range(17) for coord in (i + 1, i + 2, 0.7)]\n",
+    "    ])\n",
     "    \n",
+    "    # Expected YoloPose object lists with keypoints as YoloPoint objects\n",
     "    pose_points1 = [YoloPoint(x=i, y=i + 1, conf=0.8) for i in range(17)]\n",
     "    pose_points2 = [YoloPoint(x=i + 1, y=i + 2, conf=0.7) for i in range(17)]\n",
     "    \n",
     "    expected_pose_list = [\n",
-    "        YoloPose(lx=50, ly=60, rx=70, ry=80, conf=0.99, pts=pose_points1),\n",
-    "        YoloPose(lx=55, ly=65, rx=75, ry=85, conf=0.95, pts=pose_points2)\n",
+    "        YoloPose(lx=50, ly=60, rx=70, ry=80, cls=1, conf=0.99, pts=pose_points1),\n",
+    "        YoloPose(lx=55, ly=65, rx=75, ry=85, cls=2, conf=0.95, pts=pose_points2)\n",
     "    ]\n",
     "    \n",
+    "    # Run the conversion function and check if the output matches the expected list\n",
     "    result_pose_list = numpy_to_pose_list(input_array)\n",
     "    assert result_pose_list == expected_pose_list, \"numpy_to_pose_list() failed\"\n",
-    "\n",
     "\n",
     "# Run tests\n",
     "test_yolo_list_to_numpy()\n",
