--- a/002_check_yolo_results.ipynb
+++ b/002_check_yolo_results.ipynb
@@ -118,27 +118,27 @@
    "source": [
     "#### 测试数据\n",
     "pose_points = [YoloPoint(x=i, y=i + 1, conf=0.8) for i in range(17)]\n",
-    "pose_data = YoloPose(lx=50, ly=60, rx=70, ry=80, conf=0.99, pts=pose_points)\n",
+    "pose_data = YoloPose(lx=50, ly=60, rx=70, ry=80, cls=0, conf=0.99, pts=pose_points)\n",
     "\n",
     "#### 测试 `to_list` 方法\n",
     "pose_list = pose_data.to_list()\n",
-    "expected_pose_list = [50, 60, 70, 80, 0.99, [[i, i + 1, 0.8] for i in range(17)]]\n",
+    "expected_pose_list = [50, 60, 70, 80, 0, 0.99, [[i, i + 1, 0.8] for i in range(17)]]\n",
     "assert pose_list == expected_pose_list, \"YoloPose to_list() failed\"\n",
     "\n",
     "#### 测试 `from_list` 方法\n",
-    "pose_from_list = YoloPose(0, 0, 0, 0, 0.0)\n",
+    "pose_from_list = YoloPose(0, 0, 0, 0, 0, 0.0)\n",
     "pose_from_list.from_list(expected_pose_list)\n",
     "assert pose_from_list == pose_data, \"YoloPose from_list() failed\"\n",
     "\n",
     "#### 测试 `to_dict` 和 `from_dict` 方法\n",
     "pose_dict = pose_data.to_dict()\n",
     "expected_pose_dict = {\n",
-    "    \"lx\": 50, \"ly\": 60, \"rx\": 70, \"ry\": 80, \"conf\": 0.99,\n",
+    "    \"lx\": 50, \"ly\": 60, \"rx\": 70, \"ry\": 80, \"cls\": 0, \"conf\": 0.99,\n",
     "    \"pts\": [{\"x\": i, \"y\": i + 1, \"conf\": 0.8} for i in range(17)]\n",
     "}\n",
     "assert pose_dict == expected_pose_dict, \"YoloPose to_dict() failed\"\n",
     "\n",
-    "pose_from_dict = YoloPose(0, 0, 0, 0, 0.0)\n",
+    "pose_from_dict = YoloPose(0, 0, 0, 0, 0, 0.0)\n",
     "pose_from_dict.from_dict(expected_pose_dict)\n",
     "assert pose_from_dict == pose_data, \"YoloPose from_dict() failed\"\n",
     "\n",
