簡単な姿勢の判定は完了

--- a/003_check_yolo_aux.ipynb
+++ b/003_check_yolo_aux.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Certainly! Here are the test cases for the newly added functions. Each test case will verify that the conversion between `Yolo`/`YoloPose` objects and numpy arrays works as expected."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23,9 +16,22 @@
    "source": [
     "import numpy as np\n",
     "from common.yolo.yolo_results import Yolo, YoloPose, YoloPoint\n",
-    "from common.yolo.yolo_results_aux import yolo_list_to_numpy, pose_list_to_numpy, numpy_to_yolo_list, numpy_to_pose_list\n",
-    "\n",
-    "\n",
+    "from common.yolo.yolo_results_aux import yolo_list_to_numpy, pose_list_to_numpy, numpy_to_yolo_list, numpy_to_pose_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Test Cases for `yolo_list_to_numpy`\n",
     "def test_yolo_list_to_numpy():\n",
     "    yolo_list = [\n",
