--- a/004_check_object_tracking.ipynb
+++ b/004_check_object_tracking.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the model and video"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -36,6 +43,13 @@
     "if not cap.isOpened():\n",
     "    print(\"Error: Could not open video.\")\n",
     "    exit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run the program"
    ]
   },
   {
