ソースコードを修正した。

--- a/004_check_object_tracking.ipynb
+++ b/004_check_object_tracking.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "from common.yolo.yolo_results_aux import results_to_pose_list, pose_list_to_numpy\n",
     "from common.yolo.nms import nms_for_yolo_pose\n",
-    "from common.yolo.visualization_sort import draw_bboxes\n",
-    "from common.tracker.sort_tracker import SortTracker"
+    "from common.tracker.sort_tracker import SortTracker\n",
+    "from common.yolo.visualization import draw_sort_bboxes, draw_skeletons_without_bboxes"
    ]
   },
   {
@@ -27,10 +27,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11m-pose.pt to '/opt/models/yolo/yolo11m-pose.pt'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 40.5M/40.5M [00:02<00:00, 19.0MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the YOLOv8n-Pose model\n",
-    "model = YOLO(\"/opt/models/yolo/yolov8n-pose.pt\")\n",
+    "model = YOLO(\"/opt/models/yolo/yolo11m-pose.pt\")\n",
     "\n",
     "# Test whether the GPU device is available\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'mps' if torch.backends.mps.is_available() else 'cpu'\n",
@@ -92,6 +107,9 @@
     "    # Process the pose\n",
     "    poses = results_to_pose_list(results)\n",
     "\n",
+    "    # Draw the skeletons without the bounding boxes\n",
+    "    draw_skeletons_without_bboxes(frame, poses, show_names=False)\n",
+    "\n",
     "    # Apply NMS to the poses\n",
     "    poses = nms_for_yolo_pose(poses)\n",
     "\n",
@@ -102,13 +120,13 @@
     "    tracked_objects = tracker.update(poses_array)\n",
     "\n",
     "    # Draw the bboxes without labels\n",
-    "    draw_bboxes(frame, tracked_objects)\n",
+    "    draw_sort_bboxes(frame, tracked_objects)\n",
     "\n",
     "    # Display the frame\n",
     "    frame = cv2.resize(frame, (window_width, window_height))\n",
     "    cv2.imshow(\"Frame\", frame)\n",
     "\n",
-    "    if cv2.waitKey(100) & 0xFF == ord('q'):\n",
+    "    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
     "# Release the video capture object and close the window\n",
