姿勢の簡単推定は改善した。

--- a/005_check_simple_pose.ipynb
+++ b/005_check_simple_pose.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -14,7 +14,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "from common.yolo.yolo_results_aux import results_to_pose_list\n",
-    "from common.yolo.simple_posture_estimation import determine_pose"
+    "from common.yolo.simple_posture_estimation import determine_body_pose"
    ]
   },
   {
@@ -467,19 +467,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x448 1 person, 79.7ms\n",
-      "Speed: 4.6ms preprocess, 79.7ms inference, 96.4ms postprocess per image at shape (1, 3, 640, 448)\n",
-      "Angle: 175.71859504594903\n",
+      "0: 640x448 1 person, 47.1ms\n",
+      "Speed: 4.2ms preprocess, 47.1ms inference, 309.7ms postprocess per image at shape (1, 3, 640, 448)\n",
       "Standing\n",
       "\n",
-      "0: 640x448 1 person, 16.2ms\n",
-      "Speed: 2.0ms preprocess, 16.2ms inference, 1.9ms postprocess per image at shape (1, 3, 640, 448)\n",
-      "Angle: 133.3779667192527\n",
+      "0: 640x448 1 person, 28.8ms\n",
+      "Speed: 4.5ms preprocess, 28.8ms inference, 6.7ms postprocess per image at shape (1, 3, 640, 448)\n",
       "Bending\n",
       "\n",
-      "0: 640x416 1 person, 55.9ms\n",
-      "Speed: 1.9ms preprocess, 55.9ms inference, 3.5ms postprocess per image at shape (1, 3, 640, 416)\n",
-      "Angle: 64.36837766464191\n",
+      "0: 640x416 1 person, 64.1ms\n",
+      "Speed: 3.4ms preprocess, 64.1ms inference, 1.5ms postprocess per image at shape (1, 3, 640, 416)\n",
       "Squatting\n"
      ]
     }
@@ -489,19 +486,19 @@
     "test1 = cv2.imread(\"/opt/images/standing.png\")\n",
     "poses = results_to_pose_list(model(test1)[0])\n",
     "for pose in poses:\n",
-    "    print(determine_pose(pose))\n",
+    "    print(determine_body_pose(pose))\n",
     "\n",
     "# Load the image\n",
     "test2 = cv2.imread(\"/opt/images/bending.png\")\n",
     "poses = results_to_pose_list(model(test2)[0])\n",
     "for pose in poses:\n",
-    "    print(determine_pose(pose))\n",
+    "    print(determine_body_pose(pose))\n",
     "\n",
     "# Load the image\n",
     "test3 = cv2.imread(\"/opt/images/squatting.png\")\n",
     "poses = results_to_pose_list(model(test3)[0])\n",
     "for pose in poses:\n",
-    "    print(determine_pose(pose))"
+    "    print(determine_body_pose(pose))"
    ]
   }
  ],
