バグを修正

--- a/005_check_simple_pose.ipynb
+++ b/005_check_simple_pose.ipynb
@@ -14,7 +14,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "from common.yolo.yolo_results_aux import results_to_pose_list\n",
-    "from common.yolo.simple_posture_estimation import determine_body_pose"
+    "from common.yolo.simple_posture_estimation import detect_body_postures"
    ]
   },
   {
@@ -467,17 +467,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x448 1 person, 47.1ms\n",
-      "Speed: 4.2ms preprocess, 47.1ms inference, 309.7ms postprocess per image at shape (1, 3, 640, 448)\n",
-      "Standing\n",
+      "0: 640x448 1 person, 62.2ms\n",
+      "Speed: 5.3ms preprocess, 62.2ms inference, 167.2ms postprocess per image at shape (1, 3, 640, 448)\n",
+      "['Standing']\n",
       "\n",
-      "0: 640x448 1 person, 28.8ms\n",
-      "Speed: 4.5ms preprocess, 28.8ms inference, 6.7ms postprocess per image at shape (1, 3, 640, 448)\n",
-      "Bending\n",
+      "0: 640x448 1 person, 8.8ms\n",
+      "Speed: 1.6ms preprocess, 8.8ms inference, 2.1ms postprocess per image at shape (1, 3, 640, 448)\n",
+      "['Bending']\n",
       "\n",
-      "0: 640x416 1 person, 64.1ms\n",
-      "Speed: 3.4ms preprocess, 64.1ms inference, 1.5ms postprocess per image at shape (1, 3, 640, 416)\n",
-      "Squatting\n"
+      "0: 640x416 1 person, 74.5ms\n",
+      "Speed: 1.9ms preprocess, 74.5ms inference, 2.4ms postprocess per image at shape (1, 3, 640, 416)\n",
+      "['Squatting']\n"
      ]
     }
    ],
@@ -485,26 +485,26 @@
     "# Load the image\n",
     "test1 = cv2.imread(\"/opt/images/standing.png\")\n",
     "poses = results_to_pose_list(model(test1)[0])\n",
-    "for pose in poses:\n",
-    "    print(determine_body_pose(pose))\n",
+    "postures = detect_body_postures(poses, \"str\")\n",
+    "print(postures)\n",
     "\n",
     "# Load the image\n",
     "test2 = cv2.imread(\"/opt/images/bending.png\")\n",
     "poses = results_to_pose_list(model(test2)[0])\n",
-    "for pose in poses:\n",
-    "    print(determine_body_pose(pose))\n",
+    "postures = detect_body_postures(poses, \"str\")\n",
+    "print(postures)\n",
     "\n",
     "# Load the image\n",
     "test3 = cv2.imread(\"/opt/images/squatting.png\")\n",
     "poses = results_to_pose_list(model(test3)[0])\n",
-    "for pose in poses:\n",
-    "    print(determine_body_pose(pose))"
+    "postures = detect_body_postures(poses, \"str\")\n",
+    "print(postures)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "note_ai",
+   "display_name": "note_ai_cuda11",
    "language": "python",
    "name": "python3"
   },
