--- a/001_check_facial_orientation.ipynb
+++ b/001_check_facial_orientation.ipynb
@@ -643,7 +643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "note_ai",
+   "display_name": "note_ai_cuda11",
    "language": "python",
    "name": "python3"
   },
