--- a/002_check_yolo_results.ipynb
+++ b/002_check_yolo_results.ipynb
@@ -151,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "note_ai",
+   "display_name": "note_ai_cuda11",
    "language": "python",
    "name": "python3"
   },
