--- a/003_check_yolo_aux.ipynb
+++ b/003_check_yolo_aux.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All tests passed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from common.yolo.yolo_results import Yolo, YoloPose, YoloPoint\n",
@@ -28,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Cases for `yolo_list_to_numpy`\n",
     "def test_yolo_list_to_numpy():\n",
@@ -125,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "note_ai",
+   "display_name": "note_ai_cuda11",
    "language": "python",
    "name": "python3"
   },
