--- a/004_check_object_tracking.ipynb
+++ b/004_check_object_tracking.ipynb
@@ -27,22 +27,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11m-pose.pt to '/opt/models/yolo/yolo11m-pose.pt'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 40.5M/40.5M [00:02<00:00, 19.0MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the YOLOv8n-Pose model\n",
     "model = YOLO(\"/opt/models/yolo/yolo11m-pose.pt\")\n",
@@ -137,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "note_ai",
+   "display_name": "note_ai_cuda11",
    "language": "python",
    "name": "python3"
   },
