目標追跡を更新されました。

--- a/004_check_object_tracking.ipynb
+++ b/004_check_object_tracking.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T01:23:19.703451Z",
+     "start_time": "2024-11-21T01:23:16.021673Z"
+    }
+   },
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -14,7 +17,9 @@
     "from common.yolo.nms import nms_for_yolo_pose\n",
     "from common.tracker.sort_tracker import SortTracker\n",
     "from common.yolo.visualization import draw_sort_bboxes, draw_skeletons_without_bboxes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -25,9 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T01:23:21.340940Z",
+     "start_time": "2024-11-21T01:23:19.711240Z"
+    }
+   },
    "source": [
     "# Load the YOLOv8n-Pose model\n",
     "model = YOLO(\"/opt/models/yolo/yolo11m-pose.pt\")\n",
@@ -43,7 +51,9 @@
     "if not cap.isOpened():\n",
     "    print(\"Error: Could not open video.\")\n",
     "    exit()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -54,16 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T01:24:10.547060Z",
+     "start_time": "2024-11-21T01:23:21.519626Z"
+    }
+   },
    "source": [
     "# Define the screen and window dimensions\n",
     "window_width = 1024  # Window width as specified in cv2.resize()\n",
     "window_height = 800  # Window height as specified in cv2.resize()\n",
     "\n",
     "# Create the SORT tracker\n",
-    "tracker = SortTracker(max_age=10, min_hits=1, iou_threshold=0.5)\n",
+    "tracker = SortTracker(max_age=10, min_hits=1, iou_threshold=0.5, max_objects=100)\n",
     "\n",
     "# Set up the display window at (0, 0) position in the top-left corner\n",
     "cv2.namedWindow(\"Frame\", cv2.WINDOW_NORMAL)\n",
@@ -117,7 +130,9 @@
     "# Release the video capture object and close the window\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   }
  ],
  "metadata": {
