新関数を追加された。

--- a/002_check_yolo_aux.ipynb
+++ b/002_check_yolo_aux.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T07:35:17.516928Z",
+     "start_time": "2024-12-10T07:35:17.456171Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "from common.yolo.yolo_results import Yolo, YoloPose, YoloPoint\n",
     "from common.yolo.yolo_results_aux import yolo_list_to_numpy, pose_list_to_numpy, numpy_to_yolo_list, numpy_to_pose_list"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -20,17 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All tests passed.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T07:35:17.533343Z",
+     "start_time": "2024-12-10T07:35:17.521398Z"
     }
-   ],
+   },
    "source": [
     "# Test Cases for `yolo_list_to_numpy`\n",
     "def test_yolo_list_to_numpy():\n",
@@ -106,7 +106,17 @@
     "test_numpy_to_yolo_list()\n",
     "test_numpy_to_pose_list()\n",
     "print(\"All tests passed.\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
