ソースコードを修正された。

--- a/002_check_yolo_aux.ipynb
+++ b/002_check_yolo_aux.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T07:35:17.516928Z",
-     "start_time": "2024-12-10T07:35:17.456171Z"
+     "end_time": "2024-12-11T04:06:27.466858Z",
+     "start_time": "2024-12-11T04:06:27.333998Z"
     }
    },
    "source": [
     "import numpy as np\n",
     "from common.yolo.yolo_results import Yolo, YoloPose, YoloPoint\n",
-    "from common.yolo.yolo_results_aux import yolo_list_to_numpy, pose_list_to_numpy, numpy_to_yolo_list, numpy_to_pose_list"
+    "from common.yolo import yolo_converter as converter"
    ],
    "outputs": [],
    "execution_count": 1
@@ -27,8 +27,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T07:35:17.533343Z",
-     "start_time": "2024-12-10T07:35:17.521398Z"
+     "end_time": "2024-12-11T04:06:28.206659Z",
+     "start_time": "2024-12-11T04:06:28.187351Z"
     }
    },
    "source": [
@@ -43,7 +43,7 @@
     "        [10, 20, 30, 40, 0.95, 1],\n",
     "        [15, 25, 35, 45, 0.85, 2]\n",
     "    ])\n",
-    "    result_array = yolo_list_to_numpy(yolo_list)\n",
+    "    result_array = converter.yolo_list_to_numpy(yolo_list)\n",
     "    assert np.array_equal(result_array, expected_array), \"yolo_list_to_numpy() failed\"\n",
     "\n",
     "# Test Cases for `pose_list_to_numpy`\n",
@@ -62,7 +62,7 @@
     "        [55, 65, 75, 85, 0.95, 2] + [val for pt in pose_points2 for val in pt.to_list()]\n",
     "    ])\n",
     "    \n",
-    "    result_array = pose_list_to_numpy(pose_list)\n",
+    "    result_array = converter.pose_list_to_numpy(pose_list)\n",
     "    assert np.array_equal(result_array, expected_array), \"pose_list_to_numpy() failed\"\n",
     "\n",
     "\n",
@@ -76,7 +76,7 @@
     "        Yolo(lx=10, ly=20, rx=30, ry=40, cls=1, conf=0.95),\n",
     "        Yolo(lx=15, ly=25, rx=35, ry=45, cls=2, conf=0.85)\n",
     "    ]\n",
-    "    result_yolo_list = numpy_to_yolo_list(input_array)\n",
+    "    result_yolo_list = converter.numpy_to_yolo_list(input_array)\n",
     "    assert result_yolo_list == expected_yolo_list, \"numpy_to_yolo_list() failed\"\n",
     "\n",
     "# Test Cases for `numpy_to_pose_list`\n",
@@ -97,7 +97,7 @@
     "    ]\n",
     "    \n",
     "    # Run the conversion function and check if the output matches the expected list\n",
-    "    result_pose_list = numpy_to_pose_list(input_array)\n",
+    "    result_pose_list = converter.numpy_to_pose_list(input_array)\n",
     "    assert result_pose_list == expected_pose_list, \"numpy_to_pose_list() failed\"\n",
     "\n",
     "# Run tests\n",
