名前を変更した。

--- a/001_check_facial_orientation.ipynb
+++ b/001_check_facial_orientation.ipynb
@@ -3,22 +3,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:03:42.565102Z",
-     "start_time": "2024-12-11T04:03:38.855806Z"
+     "end_time": "2024-12-11T04:45:15.381482Z",
+     "start_time": "2024-12-11T04:45:11.241364Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import cv2\n",
     "import torch\n",
-    "from sympy.core.sympify import converter\n",
     "from ultralytics import YOLO\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from common.yolo import yolo_converter as converter\n",
+    "from common.yolo import converter as converter\n",
     "from common.yolo.drawer import Drawer\n",
     "from common.yolo.schema_loader import SchemaLoader\n",
-    "from common.yolo.nms import nms_for_yolo_pose\n",
+    "from common.yolo.nms import for_pose\n",
     "from common.yolo.facial_orientation import detect_facial_vectors"
    ],
    "id": "501d8396ef545289",
@@ -36,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:03:43.419496Z",
-     "start_time": "2024-12-11T04:03:42.571333Z"
+     "end_time": "2024-12-11T04:45:16.842925Z",
+     "start_time": "2024-12-11T04:45:15.396665Z"
     }
    },
    "cell_type": "code",
@@ -68,8 +67,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:04:33.889498Z",
-     "start_time": "2024-12-11T04:04:33.692670Z"
+     "end_time": "2024-12-11T04:45:21.925576Z",
+     "start_time": "2024-12-11T04:45:16.951813Z"
     }
    },
    "cell_type": "code",
@@ -84,7 +83,7 @@
     "poses = converter.results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
-    "poses = nms_for_yolo_pose(poses)\n",
+    "poses = for_pose(poses)\n",
     "\n",
     "# Detect the facial vectors\n",
     "facial_vectors = detect_facial_vectors(poses)\n",
@@ -112,7 +111,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -125,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:04:47.017843Z",
-     "start_time": "2024-12-11T04:04:46.816424Z"
+     "end_time": "2024-12-11T04:45:22.235320Z",
+     "start_time": "2024-12-11T04:45:21.950705Z"
     }
    },
    "cell_type": "code",
@@ -141,7 +140,7 @@
     "poses = converter.results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
-    "poses = nms_for_yolo_pose(poses)\n",
+    "poses = for_pose(poses)\n",
     "\n",
     "# Detect the facial vectors\n",
     "facial_vectors = detect_facial_vectors(poses)\n",
@@ -169,7 +168,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -182,8 +181,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:05:19.091929Z",
-     "start_time": "2024-12-11T04:05:18.944145Z"
+     "end_time": "2024-12-11T04:45:22.419632Z",
+     "start_time": "2024-12-11T04:45:22.250360Z"
     }
    },
    "cell_type": "code",
@@ -198,7 +197,7 @@
     "poses = converter.results_to_pose_list(results)\n",
     "\n",
     "# Apply NMS to the poses\n",
-    "poses = nms_for_yolo_pose(poses)\n",
+    "poses = for_pose(poses)\n",
     "\n",
     "# Detect the facial vectors\n",
     "facial_vectors = detect_facial_vectors(poses)\n",
@@ -226,7 +225,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 5
   }
  ],
  "metadata": {
