--- a/002_check_yolo_aux.ipynb
+++ b/002_check_yolo_aux.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:06:27.466858Z",
-     "start_time": "2024-12-11T04:06:27.333998Z"
+     "end_time": "2024-12-11T04:45:32.907077Z",
+     "start_time": "2024-12-11T04:45:32.785667Z"
     }
    },
    "source": [
     "import numpy as np\n",
-    "from common.yolo.yolo_results import Yolo, YoloPose, YoloPoint\n",
-    "from common.yolo import yolo_converter as converter"
+    "from common.yolo.ultralytics_results_wrapper import Yolo, YoloPose, YoloPoint\n",
+    "from common.yolo import converter as converter"
    ],
    "outputs": [],
    "execution_count": 1
@@ -27,8 +27,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T04:06:28.206659Z",
-     "start_time": "2024-12-11T04:06:28.187351Z"
+     "end_time": "2024-12-11T04:45:32.926690Z",
+     "start_time": "2024-12-11T04:45:32.913565Z"
     }
    },
    "source": [
