--- a/003_check_object_tracking.ipynb
+++ b/003_check_object_tracking.ipynb
@@ -2,20 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T04:45:42.815504Z",
+     "start_time": "2024-12-11T04:45:39.343929Z"
+    }
+   },
    "source": [
     "import cv2\n",
     "import torch\n",
     "from ultralytics import YOLO\n",
     "\n",
-    "from common.yolo import yolo_converter as converter\n",
+    "from common.yolo import converter as converter\n",
     "from common.yolo import nms\n",
     "from common.tracker.SORT import SortTracker\n",
     "from common.yolo.schema_loader import SchemaLoader\n",
     "from common.yolo.drawer import Drawer"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -26,14 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T01:23:50.465093319Z",
-     "start_time": "2024-12-11T00:35:11.150637Z"
+     "end_time": "2024-12-11T04:45:49.697798Z",
+     "start_time": "2024-12-11T04:45:42.820329Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Load the YOLOv8n-Pose model\n",
     "model = YOLO(\"/opt/models/yolo/yolo11m-pose.pt\")\n",
@@ -86,7 +89,7 @@
     "    poses = converter.results_to_pose_list(results)\n",
     "\n",
     "    # Apply NMS to the poses\n",
-    "    poses = nms.nms_for_yolo_pose(poses)\n",
+    "    poses = nms.for_pose(poses)\n",
     "\n",
     "    # Convert the list of poses to a numpy array\n",
     "    poses_array = converter.pose_list_to_numpy(poses)\n",
@@ -110,7 +113,9 @@
     "# Release the video capture object and close the window\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -126,9 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T04:45:51.847364Z",
+     "start_time": "2024-12-11T04:45:49.895833Z"
+    }
+   },
    "source": [
     "# Load the YOLOv8n-Pose model\n",
     "model = YOLO(\"/opt/models/yolo/yolov8n.pt\")\n",
@@ -181,7 +189,7 @@
     "    objects = converter.results_to_yolo_list(results)\n",
     "\n",
     "    # Apply NMS to the objects\n",
-    "    objects = nms.nms_for_yolo(objects)\n",
+    "    objects = nms.for_yolo(objects)\n",
     "\n",
     "    # Convert the list of objects to a numpy array\n",
     "    objects_array = converter.yolo_list_to_numpy(objects)\n",
@@ -205,7 +213,9 @@
     "# Release the video capture object and close the window\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   }
  ],
  "metadata": {
